--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
   "dependencies": {
     "git": "^0.1.5"
+
+    "engines": {
+      "node": "18.x"
   }
+    "scripts": {
+      "build": "react-scripts build",
+      "start": "react-scripts start"
 }
